<!--
  ~
  ~ Copyright 2016 Dandeljane Maraat
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="app_name">Police Log</string>
    <string name="header_form">Vehicle Details Form</string>

    <string name="enter_owner_name">Enter Owner Name</string>
    <string name="enter_driver_name">Enter Driver Name</string>
    <string name="enter_driver_license_num">Enter Driver License</string>
    <string name="enter_make">Enter Make</string>
    <string name="enter_color">Enter Color</string>
    <string name="enter_or">Enter Official Receipt</string>
    <string name="enter_cr">Enter Certificate of Registration</string>
    <string name="enter_engine_num">Enter Engine Number</string>
    <string name="enter_chassis_num">Enter Chassis Number</string>
    <string name="enter_contact_num">Enter Contact Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_checkpoint_loc">Enter Checkpoint Location</string>
    <string name="add_to_record">Add to Record</string>
    <string name="date_mmddyy">MM/DD/YY</string>

    <string name="owner_name">Owner Name</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_license_num">Driver License</string>
    <string name="make">Make</string>
    <string name="color">Color</string>
    <string name="or">Official Receipt</string>
    <string name="cr">Certificate of Registration</string>
    <string name="engine_num">Engine Number</string>
    <string name="chassis_num">Chassis Number</string>
    <string name="contact_num">Contact Number</string>
    <string name="address">Address</string>
    <string name="checkpoint_loc">Checkpoint Location</string>
    <string name="date_recorded">Date Logged</string>


</resources>
