<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Copyright 2016 Dandeljane Maraat
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".VehicleProfileActivity"
    android:background="@color/colorPastelBlue0">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="20"
        android:layout_column="1"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/header_form"
            android:id="@+id/textViewFormHeader"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/labelNameOwner"
            android:text="@string/owner_name"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="10dp"
            android:background="@color/colorPastelBlue1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/textNameOwner"
            android:text="@string/owner_name"
            android:layout_row="2"
            android:layout_column="0"
            android:padding="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/labelNameDriver"
            android:text="@string/driver_name"
            android:layout_row="3"
            android:layout_column="0"
            android:padding="10dp"
            android:background="@color/colorPastelBlue1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/textNameDriver"
            android:text="@string/driver_name"
            android:layout_row="4"
            android:layout_column="0"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/labelDriverLicense"
            android:text="@string/driver_license_num"
            android:layout_row="5"
            android:layout_column="0"
            android:padding="10dp"
            android:background="@color/colorPastelBlue1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/textDriverLicense"
            android:text="@string/driver_license_num"
            android:layout_row="6"
            android:layout_column="0"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/labelMake"
            android:text="@string/make"
            android:layout_row="7"
            android:layout_column="0"
            android:padding="10dp"
            android:background="@color/colorPastelBlue1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/textMake"
            android:text="@string/owner_name"
            android:layout_row="8"
            android:layout_column="0"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/labelColor"
            android:text="@string/color"
            android:layout_row="9"
            android:layout_column="0"
            android:padding="10dp"
            android:background="@color/colorPastelBlue1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/textColor"
            android:text="@string/color"
            android:layout_row="10"
            android:layout_column="0"
            android:padding="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Done"
            android:id="@+id/buttonDone"
            android:layout_row="11"
            android:layout_column="0"
            android:onClick="donePressed"/>
    </GridLayout>
</ScrollView>